--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
         <div class="bhoechie-tab-container" id="menu">
             <div class="col-lg-2 col-md-3 col-sm-3 col-xs-3 bhoechie-tab-menu">
                 <div class="list-group" style="background-color: #D3D3D3">
+                    <a href="#municipios" class="list-group-item text-center">Municipios </a>
+                    <a href="#estados" class="list-group-item text-center">Estados </a>
+                    <a href="#paises" class="list-group-item text-center">Paises </a>
                     <a href="#" class="list-group-item active text-center">Empresa </a>
                     <a href="#" class="list-group-item text-center">Usuários </a>
                     <a href="#" class="list-group-item text-center">Restrição de Acesso </a>
@@ -114,57 +117,11 @@
                 </div>
             </div>
             <div class="col-lg-8 col-md-3 col-sm-3 col-xs-3">
-
-                <!-- Nav tabs -->
-                <ul class="nav nav-tabs" role="tablist">
-                    <!--<li ng-class="tabClass(tab)" ng-repeat="tab in tabs" tab="tab"><a href="{{tab.link}}" ng-click="setSelectedTab(tab)">{{tab.label}}</a></li>-->
-                    <li role="presentation" class="active"><a href="#municipios" aria-controls="municipios" role="tab" data-toggle="tab">Municipios</a></li>
-                    <li role="presentation"><a href="#estados" aria-controls="estados" role="tab" data-toggle="tab">Estados</a></li>
-                    <li role="presentation"><a href="#paises" aria-controls="paises" role="tab" data-toggle="tab">Paises</a></li>
-                </ul>
-                <!--<div ng-view></div>-->
-
-                <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane active" id="municipios" ng-controller="MunicipioController as ctrl">
-
-                        <div ng-include="'partials/municipios/municipios.html'"></div>
-
-                    </div>
-                    <div role="tabpanel" class="tab-pane" id="estados" ng-controller="EstadoController as ctrl">
-
-                        <div ng-include="'partials/estados/estados.html'"></div>
-
-                    </div>
-                    <div role="tabpanel" class="tab-pane" id="paises" ng-controller="PaisController as ctrl">
-
-                        <div ng-include="'partials/paises/paises.html'"></div>
-
-                    </div>
-                </div>
-
-                </div>
+                <div ng-view ></div>
             </div>
         </div>
     </div>
-
-
-
-
-
 </div>
-
-<!--&lt;!&ndash; Modal &ndash;&gt;-->
-<!--<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">-->
-<!--<div class="modal-dialog" role="document">-->
-<!--<div class="modal-content">-->
-<!--<div class="modal-header">-->
-<!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
-<!--<h4 class="modal-title" id="myModalLabel">Novo Municipio</h4>-->
-<!--</div>-->
-<!--<div ng-include="'partials/municipios/municipio_add.html'"></div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
 
 <script type="text/javascript">
     function mostraMenu() {
@@ -177,6 +134,7 @@
 <script src="js/vendor/jquery-1.11.2.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/lib/angular.min.js"></script>
+<script type="text/javascript" src="js/lib/angular-route.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/services/municipio_service.js"></script>
 <script type="text/javascript" src="js/controllers/municipio_controller.js"></script>
