--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     Configurações
                 </a>
                     <ul class="dropdown-menu animation-dock" style="left:-90px;margin-top:1px;font-family: Calibri">
-                        <li><a href="#" onclick="mostraMenu();" style="font-family: Calibri">Configurações Empresa</a></li>
-                        <li><a href="#">Configurações Gerais</a></li>
+                        <li><a href="#" onclick="mostraMenu();" style="font-family: Calibri">Configurações Gerais</a></li>
+                        <li><a href="#">Configurações Empresa</a></li>
                         <li class="divider"></li>
                     </ul></li>
 
@@ -131,7 +131,7 @@
                     <a id="unNegocios" href="#unNegocios" onclick="mudaStyle(this)" class="list-group-item text-center" style="font-family: Calibri">Unidades de Negócio </a>
                 </div>
             </div>
-            <div class="col-lg-8 col-md-3 col-sm-3 col-xs-3">
+            <div class="col-lg-10 col-md-3 col-sm-3 col-xs-3" style="margin-left: -20px;">
                 <div ng-view ></div>
             </div>
         </div>
