--- a/index.html
+++ b/index.html
@@ -35,33 +35,33 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
 
-                <li class="dropdown" style="width: 180px"><a href="javascript:void(0);"
+                <li class="dropdown" ><a href="javascript:void(0);"
                                         class="dropdown-toggle ink-reaction" data-toggle="dropdown" style="color: white;font-family: Calibri">
                     Agenda Médica
                 </a>
                 </li>
 
-                <li class="dropdown" style="width: 180px"><a href="#" class="dropdown-toggle"
+                <li class="dropdown" ><a href="#" class="dropdown-toggle"
                                         data-toggle="dropdown" role="button" style="color: white;font-family: Calibri"
                                         aria-expanded="false" > Recepção<span class="caret"></span></a></li>
-                <li class="dropdown" style="width: 180px"><a href="#" class="dropdown-toggle"
+                <li class="dropdown" ><a href="#" class="dropdown-toggle"
                                         data-toggle="dropdown" role="button" style="color: white;font-family: Calibri"
                                         aria-expanded="false"> Atedimento<span class="caret"></span></a>
                 </li>
 
-                <li class="dropdown" style="width: 180px"><a href="#" class="dropdown-toggle"
+                <li class="dropdown" ><a href="#" class="dropdown-toggle"
                                         data-toggle="dropdown" role="button" style="color: white;font-family: Calibri"
                                         aria-expanded="false"> Financeiro<span class="caret"></span></a></li>
 
-                <li class="dropdown" style="width: 140px"><a href="#" class="dropdown-toggle"
+                <li class="dropdown" ><a href="#" class="dropdown-toggle"
                                         data-toggle="dropdown" role="button" style="color: white;font-family: Calibri"
                                         aria-expanded="false"> Estoque<span class="caret"></span></a></li>
 
-                <li class="dropdown" style="width: 150px"><a href="javascript:void(0);"
+                <li class="dropdown" ><a href="javascript:void(0);"
                                         class="dropdown-toggle ink-reaction" data-toggle="dropdown" style="color: white;height: 60px;font-family: Calibri">
-                    Configurações
+                    Configurações<span class="caret"></span>
                 </a>
-                    <ul class="dropdown-menu animation-dock" style="left:-90px;margin-top:1px;font-family: Calibri">
+                    <ul class="dropdown-menu animation-dock" style="left:-50px;margin-top:1px;font-family: Calibri">
                         <li><a href="#" onclick="mostraMenu();" style="font-family: Calibri">Configurações Gerais</a></li>
                         <li><a href="#">Configurações Empresa</a></li>
                         <li class="divider"></li>
@@ -69,7 +69,7 @@
 
             </ul>
             <ul class="header-nav header-nav-profile" >
-                <li class="dropdown" style="margin-left: 100px"><a href="javascript:void(0);"
+                <li class="dropdown" style="margin-left: 40px"><a href="javascript:void(0);"
                                         class="dropdown-toggle ink-reaction" data-toggle="dropdown"style="font-family: Calibri"> <img
                         src="assets/avatar1.jpg" alt="" /> <span class="profile-info" style="font-family: Calibri">
 								Pedro Henrique <small style="font-family: Calibri">Nome Empresa</small>
@@ -93,7 +93,7 @@
     <div class="row-fluid" style="margin-top: -40px;">
 
         <div class="bhoechie-tab-container" id="menu" style="display:none">
-            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-3 bhoechie-tab-menu">
+            <div class="col-lg-2 col-md-3 col-sm-3 col-xs-3 bhoechie-tab-menu" style="border-color: red">
                 <div class="list-group">
                     <p style="font-family: Calibri">Configurações Gerais:</p>
                     <a id="menuPaises" href="#paises" onclick="mudaStyle(this)" class="list-group-item text-center" style="font-family: Calibri">Paises </a>
